--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@trpc/client": "11.0.0-rc.467",
-    "@trpc/server": "11.0.0-rc.467"
+    "@trpc/server": "11.0.0-rc.467",
+    "zod": "^3.23.8"
   }
 }
